@@ -1,3 +1,8 @@
+2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-wm-manager.c: s/gboolean/guint/ in single bitfield to
+	quiet warnings from sparse.
+
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
